# advent-of-code

./: README.md
aoc_2020/: README.md
aoc_2020/day_03/: solution.py
aoc_2020/day_04/: solution.py
aoc_2020/day_07/: solution.py
aoc_2020/day_1/: part_one.py  part_two.py  solution.py
aoc_2020/day_10/: solution.py
aoc_2020/day_11/: solution.py
aoc_2020/day_12/: solution.py
aoc_2020/day_13/: requirements.txt  solution.py
aoc_2020/day_14/: solution.py
aoc_2020/day_15/: solution.py
aoc_2020/day_16/: solution.py
aoc_2020/day_17/: solution.py
aoc_2020/day_18/: solution.py  test.txt
aoc_2020/day_19/: solution.py
aoc_2020/day_2/: solution.py
aoc_2020/day_20/: pyproject.toml  requirements.txt  solution.py  solution_2.py
aoc_2020/day_20/day_20/: array.py  io.py  tile.py  utils.py
aoc_2020/day_20/notebooks/: Untitled.ipynb  solution.py
aoc_2020/day_20/tests/: test_array.py  test_io.py
aoc_2020/day_21/: solution.py  test.txt
aoc_2020/day_22/: solution.py
aoc_2020/day_23/: solution.py
aoc_2020/day_24/: solution.py
aoc_2020/day_25/: solution.py
aoc_2020/day_3/: solution.py
aoc_2020/day_5/: solution.py
aoc_2020/day_6/: solution.py
aoc_2020/day_8/: solution.py
aoc_2020/day_9/: solution.py
aoc_2021/day_01/src/: main.rs
aoc_2021/day_02/src/: main.rs
aoc_2021/day_03/src/: main.rs
