[tool.poetry]
name = "day_20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pylint = "^2.6.0"
ipykernel = "^5.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
